tests/ui/typeck/issue-29124.stderr
error[E0599]: no method named `x` found for fn item `{fn item Obj::func: fn() -> Ret}` in the current scope
  --> $DIR/issue-29124.rs:15:15
   |
LL |     Obj::func.x();
   |               ^ method not found in `{fn item Obj::func: fn() -> Ret}`

error[E0599]: no method named `x` found for fn item `{fn item func: fn() -> Ret}` in the current scope
  --> $DIR/issue-29124.rs:17:10
   |
LL |     func.x();
   |          ^ method not found in `{fn item func: fn() -> Ret}`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0599`.
